fix: mount /home/zap directory for ZAP to write internal files
- Add volume mount for /home/zap to /tmp/zap-work with write permissions
- This allows ZAP to create zap.yaml and other internal files
- Reports still saved to EVIDENCE/P11/ via /zap/wrk mount

--- a/.github/workflows/ci-p11-dast.yml
+++ b/.github/workflows/ci-p11-dast.yml
@@ -137,13 +137,17 @@ jobs:
           echo "=== Running ZAP Baseline Scan ==="
           echo "Target: ${{ steps.app_url.outputs.TARGET_URL }}"
           
+          # Create a temporary directory for ZAP to use
+          mkdir -p /tmp/zap-work
+          chmod 777 /tmp/zap-work
+          
           # Use official ZAP image with zap-baseline script
-          # The image ghcr.io/zaproxy/zaproxy:stable includes zap-baseline.py
+          # Mount both EVIDENCE/P11 for reports and /tmp/zap-work for ZAP's internal files
           docker run --rm \
             --network host \
             -v "${{ github.workspace }}/EVIDENCE/P11:/zap/wrk/:rw" \
+            -v /tmp/zap-work:/home/zap:rw \
             -w /zap/wrk \
-            -u $(id -u):$(id -g) \
             ghcr.io/zaproxy/zaproxy:stable \
             zap-baseline.py \
             -t ${{ steps.app_url.outputs.TARGET_URL }} \
